parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> model_arc
Rule 1     model_arc -> imports namespace
Rule 2     imports -> import imports
Rule 3     imports -> empty
Rule 4     definitions -> definition definitions
Rule 5     definitions -> empty
Rule 6     definition -> type_definition
Rule 7     definition -> instance
Rule 8     definition -> enum
Rule 9     definition -> transformation
Rule 10    enum -> ENUM IDENTIFIER LBRACE enum_values RBRACE
Rule 11    enum_values -> enum_value COMMA enum_values
Rule 12    enum_values -> enum_value
Rule 13    enum_value -> IDENTIFIER
Rule 14    transformation -> TRANSFORMATION IDENTIFIER IDENTIFIER ARROW IDENTIFIER LBRACE transformation_properties RBRACE
Rule 15    transformation_properties -> transformation_property transformation_properties
Rule 16    transformation_properties -> empty
Rule 17    transformation_property -> IDENTIFIER ARROW IDENTIFIER
Rule 18    transformation_property -> value ARROW IDENTIFIER
Rule 19    transformation_property -> IDENTIFIER ARROW IDENTIFIER USING IDENTIFIER
Rule 20    instance -> INSTANCE IDENTIFIER OF IDENTIFIER LBRACE instance_properties RBRACE
Rule 21    instance_properties -> instance_property instance_properties
Rule 22    instance_properties -> empty
Rule 23    instance_property -> IDENTIFIER EQUALS value
Rule 24    value -> simple_value
Rule 25    value -> complex_value
Rule 26    value -> list_value
Rule 27    value -> reference
Rule 28    list_value -> LBRACKET list_values RBRACKET
Rule 29    list_values -> value COMMA list_values
Rule 30    list_values -> value
Rule 31    reference -> IDENTIFIER
Rule 32    simple_value -> STRING
Rule 33    simple_value -> NUMBER
Rule 34    simple_value -> BOOLEAN
Rule 35    simple_value -> DATE
Rule 36    complex_value -> LBRACE instance_properties RBRACE
Rule 37    type_definition -> TYPE IDENTIFIER LBRACE type_properties RBRACE
Rule 38    type_definition -> TYPE IDENTIFIER EXTENDS IDENTIFIER LBRACE type_properties RBRACE
Rule 39    type_properties -> type_property type_properties
Rule 40    type_properties -> empty
Rule 41    type_property -> type_declaration_list
Rule 42    type_declaration_list -> type_prop type_declaration_list
Rule 43    type_declaration_list -> empty
Rule 44    type_prop -> type_declaration IDENTIFIER
Rule 45    type_prop -> IDENTIFIER LBRACE type_properties RBRACE
Rule 46    type_declaration -> primitive_type_declaration
Rule 47    type_declaration -> user_defined_type_declaration
Rule 48    user_defined_type_declaration -> IDENTIFIER
Rule 49    primitive_type_declaration -> STRING_TYPE
Rule 50    primitive_type_declaration -> NUMBER_TYPE
Rule 51    primitive_type_declaration -> BOOLEAN_TYPE
Rule 52    primitive_type_declaration -> DATE_TYPE
Rule 53    primitive_type_declaration -> LIST_TYPE LT type_declaration GT
Rule 54    import -> IMPORT STRING
Rule 55    namespace -> NAMESPACE IDENTIFIER LBRACE definitions RBRACE
Rule 56    empty -> <empty>

Terminals, with rules where they appear

ARROW                : 14 17 18 19
BOOLEAN              : 34
BOOLEAN_TYPE         : 51
COMMA                : 11 29
DATE                 : 35
DATE_TYPE            : 52
ENUM                 : 10
EQUALS               : 23
EXTENDS              : 38
GT                   : 53
IDENTIFIER           : 10 13 14 14 14 17 17 18 19 19 19 20 20 23 31 37 38 38 44 45 48 55
IMPORT               : 54
INSTANCE             : 20
LBRACE               : 10 14 20 36 37 38 45 55
LBRACKET             : 28
LIST_TYPE            : 53
LT                   : 53
NAMESPACE            : 55
NUMBER               : 33
NUMBER_TYPE          : 50
OF                   : 20
RBRACE               : 10 14 20 36 37 38 45 55
RBRACKET             : 28
STRING               : 32 54
STRING_TYPE          : 49
TRANSFORMATION       : 14
TYPE                 : 37 38
USING                : 19
error                : 

Nonterminals, with rules where they appear

complex_value        : 25
definition           : 4
definitions          : 4 55
empty                : 3 5 16 22 40 43
enum                 : 8
enum_value           : 11 12
enum_values          : 10 11
import               : 2
imports              : 1 2
instance             : 7
instance_properties  : 20 21 36
instance_property    : 21
list_value           : 26
list_values          : 28 29
model_arc            : 0
namespace            : 1
primitive_type_declaration : 46
reference            : 27
simple_value         : 24
transformation       : 9
transformation_properties : 14 15
transformation_property : 15
type_declaration     : 44 53
type_declaration_list : 41 42
type_definition      : 6
type_prop            : 42
type_properties      : 37 38 39 45
type_property        : 39
user_defined_type_declaration : 47
value                : 18 23 29 30

Parsing method: LALR

state 0

    (0) S' -> . model_arc
    (1) model_arc -> . imports namespace
    (2) imports -> . import imports
    (3) imports -> . empty
    (54) import -> . IMPORT STRING
    (56) empty -> .

    IMPORT          shift and go to state 5
    NAMESPACE       reduce using rule 56 (empty -> .)

    model_arc                      shift and go to state 1
    imports                        shift and go to state 2
    import                         shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> model_arc .



state 2

    (1) model_arc -> imports . namespace
    (55) namespace -> . NAMESPACE IDENTIFIER LBRACE definitions RBRACE

    NAMESPACE       shift and go to state 7

    namespace                      shift and go to state 6

state 3

    (2) imports -> import . imports
    (2) imports -> . import imports
    (3) imports -> . empty
    (54) import -> . IMPORT STRING
    (56) empty -> .

    IMPORT          shift and go to state 5
    NAMESPACE       reduce using rule 56 (empty -> .)

    import                         shift and go to state 3
    imports                        shift and go to state 8
    empty                          shift and go to state 4

state 4

    (3) imports -> empty .

    NAMESPACE       reduce using rule 3 (imports -> empty .)


state 5

    (54) import -> IMPORT . STRING

    STRING          shift and go to state 9


state 6

    (1) model_arc -> imports namespace .

    $end            reduce using rule 1 (model_arc -> imports namespace .)


state 7

    (55) namespace -> NAMESPACE . IDENTIFIER LBRACE definitions RBRACE

    IDENTIFIER      shift and go to state 10


state 8

    (2) imports -> import imports .

    NAMESPACE       reduce using rule 2 (imports -> import imports .)


state 9

    (54) import -> IMPORT STRING .

    IMPORT          reduce using rule 54 (import -> IMPORT STRING .)
    NAMESPACE       reduce using rule 54 (import -> IMPORT STRING .)


state 10

    (55) namespace -> NAMESPACE IDENTIFIER . LBRACE definitions RBRACE

    LBRACE          shift and go to state 11


state 11

    (55) namespace -> NAMESPACE IDENTIFIER LBRACE . definitions RBRACE
    (4) definitions -> . definition definitions
    (5) definitions -> . empty
    (6) definition -> . type_definition
    (7) definition -> . instance
    (8) definition -> . enum
    (9) definition -> . transformation
    (56) empty -> .
    (37) type_definition -> . TYPE IDENTIFIER LBRACE type_properties RBRACE
    (38) type_definition -> . TYPE IDENTIFIER EXTENDS IDENTIFIER LBRACE type_properties RBRACE
    (20) instance -> . INSTANCE IDENTIFIER OF IDENTIFIER LBRACE instance_properties RBRACE
    (10) enum -> . ENUM IDENTIFIER LBRACE enum_values RBRACE
    (14) transformation -> . TRANSFORMATION IDENTIFIER IDENTIFIER ARROW IDENTIFIER LBRACE transformation_properties RBRACE

    RBRACE          reduce using rule 56 (empty -> .)
    TYPE            shift and go to state 19
    INSTANCE        shift and go to state 20
    ENUM            shift and go to state 21
    TRANSFORMATION  shift and go to state 22

    definitions                    shift and go to state 12
    definition                     shift and go to state 13
    empty                          shift and go to state 14
    type_definition                shift and go to state 15
    instance                       shift and go to state 16
    enum                           shift and go to state 17
    transformation                 shift and go to state 18

state 12

    (55) namespace -> NAMESPACE IDENTIFIER LBRACE definitions . RBRACE

    RBRACE          shift and go to state 23


state 13

    (4) definitions -> definition . definitions
    (4) definitions -> . definition definitions
    (5) definitions -> . empty
    (6) definition -> . type_definition
    (7) definition -> . instance
    (8) definition -> . enum
    (9) definition -> . transformation
    (56) empty -> .
    (37) type_definition -> . TYPE IDENTIFIER LBRACE type_properties RBRACE
    (38) type_definition -> . TYPE IDENTIFIER EXTENDS IDENTIFIER LBRACE type_properties RBRACE
    (20) instance -> . INSTANCE IDENTIFIER OF IDENTIFIER LBRACE instance_properties RBRACE
    (10) enum -> . ENUM IDENTIFIER LBRACE enum_values RBRACE
    (14) transformation -> . TRANSFORMATION IDENTIFIER IDENTIFIER ARROW IDENTIFIER LBRACE transformation_properties RBRACE

    RBRACE          reduce using rule 56 (empty -> .)
    TYPE            shift and go to state 19
    INSTANCE        shift and go to state 20
    ENUM            shift and go to state 21
    TRANSFORMATION  shift and go to state 22

    definition                     shift and go to state 13
    definitions                    shift and go to state 24
    empty                          shift and go to state 14
    type_definition                shift and go to state 15
    instance                       shift and go to state 16
    enum                           shift and go to state 17
    transformation                 shift and go to state 18

state 14

    (5) definitions -> empty .

    RBRACE          reduce using rule 5 (definitions -> empty .)


state 15

    (6) definition -> type_definition .

    TYPE            reduce using rule 6 (definition -> type_definition .)
    INSTANCE        reduce using rule 6 (definition -> type_definition .)
    ENUM            reduce using rule 6 (definition -> type_definition .)
    TRANSFORMATION  reduce using rule 6 (definition -> type_definition .)
    RBRACE          reduce using rule 6 (definition -> type_definition .)


state 16

    (7) definition -> instance .

    TYPE            reduce using rule 7 (definition -> instance .)
    INSTANCE        reduce using rule 7 (definition -> instance .)
    ENUM            reduce using rule 7 (definition -> instance .)
    TRANSFORMATION  reduce using rule 7 (definition -> instance .)
    RBRACE          reduce using rule 7 (definition -> instance .)


state 17

    (8) definition -> enum .

    TYPE            reduce using rule 8 (definition -> enum .)
    INSTANCE        reduce using rule 8 (definition -> enum .)
    ENUM            reduce using rule 8 (definition -> enum .)
    TRANSFORMATION  reduce using rule 8 (definition -> enum .)
    RBRACE          reduce using rule 8 (definition -> enum .)


state 18

    (9) definition -> transformation .

    TYPE            reduce using rule 9 (definition -> transformation .)
    INSTANCE        reduce using rule 9 (definition -> transformation .)
    ENUM            reduce using rule 9 (definition -> transformation .)
    TRANSFORMATION  reduce using rule 9 (definition -> transformation .)
    RBRACE          reduce using rule 9 (definition -> transformation .)


state 19

    (37) type_definition -> TYPE . IDENTIFIER LBRACE type_properties RBRACE
    (38) type_definition -> TYPE . IDENTIFIER EXTENDS IDENTIFIER LBRACE type_properties RBRACE

    IDENTIFIER      shift and go to state 25


state 20

    (20) instance -> INSTANCE . IDENTIFIER OF IDENTIFIER LBRACE instance_properties RBRACE

    IDENTIFIER      shift and go to state 26


state 21

    (10) enum -> ENUM . IDENTIFIER LBRACE enum_values RBRACE

    IDENTIFIER      shift and go to state 27


state 22

    (14) transformation -> TRANSFORMATION . IDENTIFIER IDENTIFIER ARROW IDENTIFIER LBRACE transformation_properties RBRACE

    IDENTIFIER      shift and go to state 28


state 23

    (55) namespace -> NAMESPACE IDENTIFIER LBRACE definitions RBRACE .

    $end            reduce using rule 55 (namespace -> NAMESPACE IDENTIFIER LBRACE definitions RBRACE .)


state 24

    (4) definitions -> definition definitions .

    RBRACE          reduce using rule 4 (definitions -> definition definitions .)


state 25

    (37) type_definition -> TYPE IDENTIFIER . LBRACE type_properties RBRACE
    (38) type_definition -> TYPE IDENTIFIER . EXTENDS IDENTIFIER LBRACE type_properties RBRACE

    LBRACE          shift and go to state 29
    EXTENDS         shift and go to state 30


state 26

    (20) instance -> INSTANCE IDENTIFIER . OF IDENTIFIER LBRACE instance_properties RBRACE

    OF              shift and go to state 31


state 27

    (10) enum -> ENUM IDENTIFIER . LBRACE enum_values RBRACE

    LBRACE          shift and go to state 32


state 28

    (14) transformation -> TRANSFORMATION IDENTIFIER . IDENTIFIER ARROW IDENTIFIER LBRACE transformation_properties RBRACE

    IDENTIFIER      shift and go to state 33


state 29

    (37) type_definition -> TYPE IDENTIFIER LBRACE . type_properties RBRACE
    (39) type_properties -> . type_property type_properties
    (40) type_properties -> . empty
    (41) type_property -> . type_declaration_list
    (56) empty -> .
    (42) type_declaration_list -> . type_prop type_declaration_list
    (43) type_declaration_list -> . empty
    (44) type_prop -> . type_declaration IDENTIFIER
    (45) type_prop -> . IDENTIFIER LBRACE type_properties RBRACE
    (46) type_declaration -> . primitive_type_declaration
    (47) type_declaration -> . user_defined_type_declaration
    (49) primitive_type_declaration -> . STRING_TYPE
    (50) primitive_type_declaration -> . NUMBER_TYPE
    (51) primitive_type_declaration -> . BOOLEAN_TYPE
    (52) primitive_type_declaration -> . DATE_TYPE
    (53) primitive_type_declaration -> . LIST_TYPE LT type_declaration GT
    (48) user_defined_type_declaration -> . IDENTIFIER

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for NUMBER_TYPE resolved as shift
  ! shift/reduce conflict for BOOLEAN_TYPE resolved as shift
  ! shift/reduce conflict for DATE_TYPE resolved as shift
  ! shift/reduce conflict for LIST_TYPE resolved as shift
    RBRACE          reduce using rule 56 (empty -> .)
    IDENTIFIER      shift and go to state 34
    STRING_TYPE     shift and go to state 43
    NUMBER_TYPE     shift and go to state 44
    BOOLEAN_TYPE    shift and go to state 45
    DATE_TYPE       shift and go to state 46
    LIST_TYPE       shift and go to state 47

  ! IDENTIFIER      [ reduce using rule 56 (empty -> .) ]
  ! STRING_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! NUMBER_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! BOOLEAN_TYPE    [ reduce using rule 56 (empty -> .) ]
  ! DATE_TYPE       [ reduce using rule 56 (empty -> .) ]
  ! LIST_TYPE       [ reduce using rule 56 (empty -> .) ]

    type_properties                shift and go to state 35
    type_property                  shift and go to state 36
    empty                          shift and go to state 37
    type_declaration_list          shift and go to state 38
    type_prop                      shift and go to state 39
    type_declaration               shift and go to state 40
    primitive_type_declaration     shift and go to state 41
    user_defined_type_declaration  shift and go to state 42

state 30

    (38) type_definition -> TYPE IDENTIFIER EXTENDS . IDENTIFIER LBRACE type_properties RBRACE

    IDENTIFIER      shift and go to state 48


state 31

    (20) instance -> INSTANCE IDENTIFIER OF . IDENTIFIER LBRACE instance_properties RBRACE

    IDENTIFIER      shift and go to state 49


state 32

    (10) enum -> ENUM IDENTIFIER LBRACE . enum_values RBRACE
    (11) enum_values -> . enum_value COMMA enum_values
    (12) enum_values -> . enum_value
    (13) enum_value -> . IDENTIFIER

    IDENTIFIER      shift and go to state 50

    enum_values                    shift and go to state 51
    enum_value                     shift and go to state 52

state 33

    (14) transformation -> TRANSFORMATION IDENTIFIER IDENTIFIER . ARROW IDENTIFIER LBRACE transformation_properties RBRACE

    ARROW           shift and go to state 53


state 34

    (45) type_prop -> IDENTIFIER . LBRACE type_properties RBRACE
    (48) user_defined_type_declaration -> IDENTIFIER .

    LBRACE          shift and go to state 54
    IDENTIFIER      reduce using rule 48 (user_defined_type_declaration -> IDENTIFIER .)


state 35

    (37) type_definition -> TYPE IDENTIFIER LBRACE type_properties . RBRACE

    RBRACE          shift and go to state 55


state 36

    (39) type_properties -> type_property . type_properties
    (39) type_properties -> . type_property type_properties
    (40) type_properties -> . empty
    (41) type_property -> . type_declaration_list
    (56) empty -> .
    (42) type_declaration_list -> . type_prop type_declaration_list
    (43) type_declaration_list -> . empty
    (44) type_prop -> . type_declaration IDENTIFIER
    (45) type_prop -> . IDENTIFIER LBRACE type_properties RBRACE
    (46) type_declaration -> . primitive_type_declaration
    (47) type_declaration -> . user_defined_type_declaration
    (49) primitive_type_declaration -> . STRING_TYPE
    (50) primitive_type_declaration -> . NUMBER_TYPE
    (51) primitive_type_declaration -> . BOOLEAN_TYPE
    (52) primitive_type_declaration -> . DATE_TYPE
    (53) primitive_type_declaration -> . LIST_TYPE LT type_declaration GT
    (48) user_defined_type_declaration -> . IDENTIFIER

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for NUMBER_TYPE resolved as shift
  ! shift/reduce conflict for BOOLEAN_TYPE resolved as shift
  ! shift/reduce conflict for DATE_TYPE resolved as shift
  ! shift/reduce conflict for LIST_TYPE resolved as shift
    RBRACE          reduce using rule 56 (empty -> .)
    IDENTIFIER      shift and go to state 34
    STRING_TYPE     shift and go to state 43
    NUMBER_TYPE     shift and go to state 44
    BOOLEAN_TYPE    shift and go to state 45
    DATE_TYPE       shift and go to state 46
    LIST_TYPE       shift and go to state 47

  ! IDENTIFIER      [ reduce using rule 56 (empty -> .) ]
  ! STRING_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! NUMBER_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! BOOLEAN_TYPE    [ reduce using rule 56 (empty -> .) ]
  ! DATE_TYPE       [ reduce using rule 56 (empty -> .) ]
  ! LIST_TYPE       [ reduce using rule 56 (empty -> .) ]

    type_property                  shift and go to state 36
    type_properties                shift and go to state 56
    empty                          shift and go to state 37
    type_declaration_list          shift and go to state 38
    type_prop                      shift and go to state 39
    type_declaration               shift and go to state 40
    primitive_type_declaration     shift and go to state 41
    user_defined_type_declaration  shift and go to state 42

state 37

    (40) type_properties -> empty .
    (43) type_declaration_list -> empty .

  ! reduce/reduce conflict for RBRACE resolved using rule 40 (type_properties -> empty .)
    RBRACE          reduce using rule 40 (type_properties -> empty .)
    IDENTIFIER      reduce using rule 43 (type_declaration_list -> empty .)
    STRING_TYPE     reduce using rule 43 (type_declaration_list -> empty .)
    NUMBER_TYPE     reduce using rule 43 (type_declaration_list -> empty .)
    BOOLEAN_TYPE    reduce using rule 43 (type_declaration_list -> empty .)
    DATE_TYPE       reduce using rule 43 (type_declaration_list -> empty .)
    LIST_TYPE       reduce using rule 43 (type_declaration_list -> empty .)

  ! RBRACE          [ reduce using rule 43 (type_declaration_list -> empty .) ]


state 38

    (41) type_property -> type_declaration_list .

    IDENTIFIER      reduce using rule 41 (type_property -> type_declaration_list .)
    STRING_TYPE     reduce using rule 41 (type_property -> type_declaration_list .)
    NUMBER_TYPE     reduce using rule 41 (type_property -> type_declaration_list .)
    BOOLEAN_TYPE    reduce using rule 41 (type_property -> type_declaration_list .)
    DATE_TYPE       reduce using rule 41 (type_property -> type_declaration_list .)
    LIST_TYPE       reduce using rule 41 (type_property -> type_declaration_list .)
    RBRACE          reduce using rule 41 (type_property -> type_declaration_list .)


state 39

    (42) type_declaration_list -> type_prop . type_declaration_list
    (42) type_declaration_list -> . type_prop type_declaration_list
    (43) type_declaration_list -> . empty
    (44) type_prop -> . type_declaration IDENTIFIER
    (45) type_prop -> . IDENTIFIER LBRACE type_properties RBRACE
    (56) empty -> .
    (46) type_declaration -> . primitive_type_declaration
    (47) type_declaration -> . user_defined_type_declaration
    (49) primitive_type_declaration -> . STRING_TYPE
    (50) primitive_type_declaration -> . NUMBER_TYPE
    (51) primitive_type_declaration -> . BOOLEAN_TYPE
    (52) primitive_type_declaration -> . DATE_TYPE
    (53) primitive_type_declaration -> . LIST_TYPE LT type_declaration GT
    (48) user_defined_type_declaration -> . IDENTIFIER

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for NUMBER_TYPE resolved as shift
  ! shift/reduce conflict for BOOLEAN_TYPE resolved as shift
  ! shift/reduce conflict for DATE_TYPE resolved as shift
  ! shift/reduce conflict for LIST_TYPE resolved as shift
    IDENTIFIER      shift and go to state 34
    RBRACE          reduce using rule 56 (empty -> .)
    STRING_TYPE     shift and go to state 43
    NUMBER_TYPE     shift and go to state 44
    BOOLEAN_TYPE    shift and go to state 45
    DATE_TYPE       shift and go to state 46
    LIST_TYPE       shift and go to state 47

  ! IDENTIFIER      [ reduce using rule 56 (empty -> .) ]
  ! STRING_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! NUMBER_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! BOOLEAN_TYPE    [ reduce using rule 56 (empty -> .) ]
  ! DATE_TYPE       [ reduce using rule 56 (empty -> .) ]
  ! LIST_TYPE       [ reduce using rule 56 (empty -> .) ]

    type_prop                      shift and go to state 39
    type_declaration_list          shift and go to state 57
    empty                          shift and go to state 58
    type_declaration               shift and go to state 40
    primitive_type_declaration     shift and go to state 41
    user_defined_type_declaration  shift and go to state 42

state 40

    (44) type_prop -> type_declaration . IDENTIFIER

    IDENTIFIER      shift and go to state 59


state 41

    (46) type_declaration -> primitive_type_declaration .

    IDENTIFIER      reduce using rule 46 (type_declaration -> primitive_type_declaration .)
    GT              reduce using rule 46 (type_declaration -> primitive_type_declaration .)


state 42

    (47) type_declaration -> user_defined_type_declaration .

    IDENTIFIER      reduce using rule 47 (type_declaration -> user_defined_type_declaration .)
    GT              reduce using rule 47 (type_declaration -> user_defined_type_declaration .)


state 43

    (49) primitive_type_declaration -> STRING_TYPE .

    IDENTIFIER      reduce using rule 49 (primitive_type_declaration -> STRING_TYPE .)
    GT              reduce using rule 49 (primitive_type_declaration -> STRING_TYPE .)


state 44

    (50) primitive_type_declaration -> NUMBER_TYPE .

    IDENTIFIER      reduce using rule 50 (primitive_type_declaration -> NUMBER_TYPE .)
    GT              reduce using rule 50 (primitive_type_declaration -> NUMBER_TYPE .)


state 45

    (51) primitive_type_declaration -> BOOLEAN_TYPE .

    IDENTIFIER      reduce using rule 51 (primitive_type_declaration -> BOOLEAN_TYPE .)
    GT              reduce using rule 51 (primitive_type_declaration -> BOOLEAN_TYPE .)


state 46

    (52) primitive_type_declaration -> DATE_TYPE .

    IDENTIFIER      reduce using rule 52 (primitive_type_declaration -> DATE_TYPE .)
    GT              reduce using rule 52 (primitive_type_declaration -> DATE_TYPE .)


state 47

    (53) primitive_type_declaration -> LIST_TYPE . LT type_declaration GT

    LT              shift and go to state 60


state 48

    (38) type_definition -> TYPE IDENTIFIER EXTENDS IDENTIFIER . LBRACE type_properties RBRACE

    LBRACE          shift and go to state 61


state 49

    (20) instance -> INSTANCE IDENTIFIER OF IDENTIFIER . LBRACE instance_properties RBRACE

    LBRACE          shift and go to state 62


state 50

    (13) enum_value -> IDENTIFIER .

    COMMA           reduce using rule 13 (enum_value -> IDENTIFIER .)
    RBRACE          reduce using rule 13 (enum_value -> IDENTIFIER .)


state 51

    (10) enum -> ENUM IDENTIFIER LBRACE enum_values . RBRACE

    RBRACE          shift and go to state 63


state 52

    (11) enum_values -> enum_value . COMMA enum_values
    (12) enum_values -> enum_value .

    COMMA           shift and go to state 64
    RBRACE          reduce using rule 12 (enum_values -> enum_value .)


state 53

    (14) transformation -> TRANSFORMATION IDENTIFIER IDENTIFIER ARROW . IDENTIFIER LBRACE transformation_properties RBRACE

    IDENTIFIER      shift and go to state 65


state 54

    (45) type_prop -> IDENTIFIER LBRACE . type_properties RBRACE
    (39) type_properties -> . type_property type_properties
    (40) type_properties -> . empty
    (41) type_property -> . type_declaration_list
    (56) empty -> .
    (42) type_declaration_list -> . type_prop type_declaration_list
    (43) type_declaration_list -> . empty
    (44) type_prop -> . type_declaration IDENTIFIER
    (45) type_prop -> . IDENTIFIER LBRACE type_properties RBRACE
    (46) type_declaration -> . primitive_type_declaration
    (47) type_declaration -> . user_defined_type_declaration
    (49) primitive_type_declaration -> . STRING_TYPE
    (50) primitive_type_declaration -> . NUMBER_TYPE
    (51) primitive_type_declaration -> . BOOLEAN_TYPE
    (52) primitive_type_declaration -> . DATE_TYPE
    (53) primitive_type_declaration -> . LIST_TYPE LT type_declaration GT
    (48) user_defined_type_declaration -> . IDENTIFIER

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for NUMBER_TYPE resolved as shift
  ! shift/reduce conflict for BOOLEAN_TYPE resolved as shift
  ! shift/reduce conflict for DATE_TYPE resolved as shift
  ! shift/reduce conflict for LIST_TYPE resolved as shift
    RBRACE          reduce using rule 56 (empty -> .)
    IDENTIFIER      shift and go to state 34
    STRING_TYPE     shift and go to state 43
    NUMBER_TYPE     shift and go to state 44
    BOOLEAN_TYPE    shift and go to state 45
    DATE_TYPE       shift and go to state 46
    LIST_TYPE       shift and go to state 47

  ! IDENTIFIER      [ reduce using rule 56 (empty -> .) ]
  ! STRING_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! NUMBER_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! BOOLEAN_TYPE    [ reduce using rule 56 (empty -> .) ]
  ! DATE_TYPE       [ reduce using rule 56 (empty -> .) ]
  ! LIST_TYPE       [ reduce using rule 56 (empty -> .) ]

    type_properties                shift and go to state 66
    type_property                  shift and go to state 36
    empty                          shift and go to state 37
    type_declaration_list          shift and go to state 38
    type_prop                      shift and go to state 39
    type_declaration               shift and go to state 40
    primitive_type_declaration     shift and go to state 41
    user_defined_type_declaration  shift and go to state 42

state 55

    (37) type_definition -> TYPE IDENTIFIER LBRACE type_properties RBRACE .

    TYPE            reduce using rule 37 (type_definition -> TYPE IDENTIFIER LBRACE type_properties RBRACE .)
    INSTANCE        reduce using rule 37 (type_definition -> TYPE IDENTIFIER LBRACE type_properties RBRACE .)
    ENUM            reduce using rule 37 (type_definition -> TYPE IDENTIFIER LBRACE type_properties RBRACE .)
    TRANSFORMATION  reduce using rule 37 (type_definition -> TYPE IDENTIFIER LBRACE type_properties RBRACE .)
    RBRACE          reduce using rule 37 (type_definition -> TYPE IDENTIFIER LBRACE type_properties RBRACE .)


state 56

    (39) type_properties -> type_property type_properties .

    RBRACE          reduce using rule 39 (type_properties -> type_property type_properties .)


state 57

    (42) type_declaration_list -> type_prop type_declaration_list .

    IDENTIFIER      reduce using rule 42 (type_declaration_list -> type_prop type_declaration_list .)
    STRING_TYPE     reduce using rule 42 (type_declaration_list -> type_prop type_declaration_list .)
    NUMBER_TYPE     reduce using rule 42 (type_declaration_list -> type_prop type_declaration_list .)
    BOOLEAN_TYPE    reduce using rule 42 (type_declaration_list -> type_prop type_declaration_list .)
    DATE_TYPE       reduce using rule 42 (type_declaration_list -> type_prop type_declaration_list .)
    LIST_TYPE       reduce using rule 42 (type_declaration_list -> type_prop type_declaration_list .)
    RBRACE          reduce using rule 42 (type_declaration_list -> type_prop type_declaration_list .)


state 58

    (43) type_declaration_list -> empty .

    IDENTIFIER      reduce using rule 43 (type_declaration_list -> empty .)
    STRING_TYPE     reduce using rule 43 (type_declaration_list -> empty .)
    NUMBER_TYPE     reduce using rule 43 (type_declaration_list -> empty .)
    BOOLEAN_TYPE    reduce using rule 43 (type_declaration_list -> empty .)
    DATE_TYPE       reduce using rule 43 (type_declaration_list -> empty .)
    LIST_TYPE       reduce using rule 43 (type_declaration_list -> empty .)
    RBRACE          reduce using rule 43 (type_declaration_list -> empty .)


state 59

    (44) type_prop -> type_declaration IDENTIFIER .

    IDENTIFIER      reduce using rule 44 (type_prop -> type_declaration IDENTIFIER .)
    STRING_TYPE     reduce using rule 44 (type_prop -> type_declaration IDENTIFIER .)
    NUMBER_TYPE     reduce using rule 44 (type_prop -> type_declaration IDENTIFIER .)
    BOOLEAN_TYPE    reduce using rule 44 (type_prop -> type_declaration IDENTIFIER .)
    DATE_TYPE       reduce using rule 44 (type_prop -> type_declaration IDENTIFIER .)
    LIST_TYPE       reduce using rule 44 (type_prop -> type_declaration IDENTIFIER .)
    RBRACE          reduce using rule 44 (type_prop -> type_declaration IDENTIFIER .)


state 60

    (53) primitive_type_declaration -> LIST_TYPE LT . type_declaration GT
    (46) type_declaration -> . primitive_type_declaration
    (47) type_declaration -> . user_defined_type_declaration
    (49) primitive_type_declaration -> . STRING_TYPE
    (50) primitive_type_declaration -> . NUMBER_TYPE
    (51) primitive_type_declaration -> . BOOLEAN_TYPE
    (52) primitive_type_declaration -> . DATE_TYPE
    (53) primitive_type_declaration -> . LIST_TYPE LT type_declaration GT
    (48) user_defined_type_declaration -> . IDENTIFIER

    STRING_TYPE     shift and go to state 43
    NUMBER_TYPE     shift and go to state 44
    BOOLEAN_TYPE    shift and go to state 45
    DATE_TYPE       shift and go to state 46
    LIST_TYPE       shift and go to state 47
    IDENTIFIER      shift and go to state 68

    type_declaration               shift and go to state 67
    primitive_type_declaration     shift and go to state 41
    user_defined_type_declaration  shift and go to state 42

state 61

    (38) type_definition -> TYPE IDENTIFIER EXTENDS IDENTIFIER LBRACE . type_properties RBRACE
    (39) type_properties -> . type_property type_properties
    (40) type_properties -> . empty
    (41) type_property -> . type_declaration_list
    (56) empty -> .
    (42) type_declaration_list -> . type_prop type_declaration_list
    (43) type_declaration_list -> . empty
    (44) type_prop -> . type_declaration IDENTIFIER
    (45) type_prop -> . IDENTIFIER LBRACE type_properties RBRACE
    (46) type_declaration -> . primitive_type_declaration
    (47) type_declaration -> . user_defined_type_declaration
    (49) primitive_type_declaration -> . STRING_TYPE
    (50) primitive_type_declaration -> . NUMBER_TYPE
    (51) primitive_type_declaration -> . BOOLEAN_TYPE
    (52) primitive_type_declaration -> . DATE_TYPE
    (53) primitive_type_declaration -> . LIST_TYPE LT type_declaration GT
    (48) user_defined_type_declaration -> . IDENTIFIER

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for NUMBER_TYPE resolved as shift
  ! shift/reduce conflict for BOOLEAN_TYPE resolved as shift
  ! shift/reduce conflict for DATE_TYPE resolved as shift
  ! shift/reduce conflict for LIST_TYPE resolved as shift
    RBRACE          reduce using rule 56 (empty -> .)
    IDENTIFIER      shift and go to state 34
    STRING_TYPE     shift and go to state 43
    NUMBER_TYPE     shift and go to state 44
    BOOLEAN_TYPE    shift and go to state 45
    DATE_TYPE       shift and go to state 46
    LIST_TYPE       shift and go to state 47

  ! IDENTIFIER      [ reduce using rule 56 (empty -> .) ]
  ! STRING_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! NUMBER_TYPE     [ reduce using rule 56 (empty -> .) ]
  ! BOOLEAN_TYPE    [ reduce using rule 56 (empty -> .) ]
  ! DATE_TYPE       [ reduce using rule 56 (empty -> .) ]
  ! LIST_TYPE       [ reduce using rule 56 (empty -> .) ]
